--- a/resources/sass/utlitites/_variables.scss
+++ b/resources/sass/utlitites/_variables.scss
@@ -38,6 +38,7 @@
     --faction-bureau: #94e5a4;
     --faction-plants: #14ce00;
     --faction-ghosts: #4a9ed8;
+    --faction-spiders: #ae7688;
 }
 
 .faction-neutrals{color: white}
@@ -62,6 +63,7 @@
 .faction-bureau {color: var(--faction-bureau)}
 .faction-plants {color: var(--faction-plants)}
 .faction-ghosts {color: var(--faction-ghosts)}
+.faction-spiders {color: var(--faction-spiders)}
 
 .primary { color: var(--primary-color) }
 .primary-light { color: var(--primary-light-color) }
